[gd_scene load_steps=5 format=3 uid="uid://bgr1csyltyl43"]

[ext_resource type="PackedScene" uid="uid://cgoe2jm0kfrxb" path="res://player.tscn" id="1_idj8o"]
[ext_resource type="Script" path="res://game.gd" id="1_yl5j1"]
[ext_resource type="PackedScene" uid="uid://cjneqq7ik248c" path="res://tree.tscn" id="2_4j20u"]

[sub_resource type="Curve2D" id="Curve2D_1ivgu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -177, -179, 0, 0, 0, 0, 2162, -187, 0, 0, 0, 0, 2174, 1208, 0, 0, 0, 0, -183, 1213, 0, 0, 0, 0, -177, -169)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_yl5j1")

[node name="World" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = -1

[node name="WorldRect" type="ColorRect" parent="World"]
offset_right = 1935.0
offset_bottom = 1096.0

[node name="Player" parent="." instance=ExtResource("1_idj8o")]
position = Vector2(929, 491)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-1066, -517.033)
scale = Vector2(1.09291, 1.10143)
curve = SubResource("Curve2D_1ivgu")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-177, -179)
rotation = -0.00342025

[node name="Tree" parent="." instance=ExtResource("2_4j20u")]
position = Vector2(420, 475)

[node name="Tree2" parent="." instance=ExtResource("2_4j20u")]
position = Vector2(806, 919)

[node name="Tree3" parent="." instance=ExtResource("2_4j20u")]
position = Vector2(1272, 748)

[node name="Tree4" parent="." instance=ExtResource("2_4j20u")]
position = Vector2(1632, 391)

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.603922)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -11.5
offset_right = 42.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "Game over"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
